# functions/routes/data.js
@@ -14,13 +14,13 @@ const {
   getNotifications,
   getEventInformation,
 } = require("../controllers/data");
-const isAuthenticated = require("../middlewares/auth");
+
 const router = require("express").Router();
 
 router.get("/facts", randomFact
 );
 router.get("/videos", video);
-router.get("/timestamp", getTimestamp);
+// router.get("/timestamp", getTimestamp);
 router.get("/timestamp/events", getNextEvents);
 router.get("/contacts", getContacts);
 
@@ -35,5 +35,5 @@ router.get("/foodSponsors", foodSponsors);
 router.get("/about", getDeveloper);
 router.get("/aboutAppDevs", getAppDevelopers);
 router.get("/notification", getNotifications);
-router.get("/events/search", getEventInformation);
+// router.get("/events/search", getEventInformation);
 module.exports = router;
